# mtb-pykeybasebot

./: .buildpacks  .buildpacks.old  .gitignore  .profile  Aptfile  Aptfile.old  DOKKU_SCALE  Dockerfile  Procfile  ProcfileNew  alembic.ini  app.json  config.py  crud.py  docker-compose.yml  dockerfile  entrypoint.sh  get_covid.sh  install_dependencies.sh  keybase-commands  marvn_agent.py  models.py  morethanmarvin.py  preview_dummy.go  pyproject.toml  release-task.sh  requirements.bak  requirements.txt  test.py  webhook_bot.py  webhook_keybase_service.py
alembic/: env.py
alembic/versions/: 015458303462_added_user_relationship_to_message_.py  05d5aaa16652_added_till_table.py  06bb7d273c50_teams_users.py  0b4748b2f042_init_user_team_point_tables.py  0eca86215146_added_sender_to_messagequeue.py  1beb194e4d1d_switched_team_tills_to_dynamic.py  1e4fb2044126_added_wager_relationship_to_team.py  250a80761aee_added_completedtasks_table.py  284bc12bd7e6_added_local_table.py  431dfadb8c47_create_completed_tasks_table.py  4d9e6fd1bf35_change_u_wagers_to_u_bets.py  4fa2e6510158_add_lazy_dynamic.py  50a4e90b32d5_added_team_to_completed_task_table.py  50c32ff1611d_create_message_table.py  584e57f03df3_change_u_wagers_to_u_bets.py  6c19bf39240c_added_message_queue.py  6d3f15e229a4_order_wagers_by_id.py  71986822288d_add_team_to_points_table.py  7776ba585eb0_added_completedtasks_table.py  8092291627e8_change_u_wagers_to_u_bets.py  812e0c24715d_added_ip.py  889e5cb3676c_fix_message_wager_relationship.py  97306ac2eb77_order_wagers_by_id.py  a0803947ba6b_add_points.py  a4dc401b5086_add_since.py  af722e6e50bb_fix_messages_relationship.py  b074be8f8a4f_add_dynamic_to_local.py  b65ffbaf39e8_change_time_format_on_wagers.py  bd370ef54762_added_potion_to_bets.py  c315f39adaac_fix_points_team_ref.py  c7dbcaf6f33e_change_local_to_location.py  e64a019a8219_add_timestamps_to_local_table.py  e8a7a141ca31_sort_tills_by_date.py  ec1422aa30b6_add_bets_and_wagers.py  ede7e5abc36e_add_link_to_teams_and_since.py  ee8952a054f5_add_conv_id_to_messages_table.py  faf8c689c02c_set_unique_constraint.py
botcommands/: advent_of_code.py  ai_context.py  apnews.py  artical_scraper.py  award_activity_points.py  bible.py  check_stock.py  checkspeed.py  chuck.py  coinbase.py  convo_tracker.py  cookies.txt  covid.py  covid_county.py  cow_characters.py  cow_say.py  curl_commands.py  db_events.py  discordia.py  draw_dallie.py  drwho.py  election_poll.py  eyebleach.py  files.py  get_grades.py  get_members.py  get_screenshot.py  jitsi.py  jokes.py  keep.py  local_polls.py  meh.py  morbidity.py  morningreport.py  morse.py  natural_chat.py  news.py  open-ai-agent.py  open_ai_agent.py  pacyber.py  (+24 more)
botcommands/storage/: discordia.htm
pykeybasebot/: bot.py  chat_client.py  cli.py  utils.py
storage/: update_covid.sh
www/: index.html  score.html  sincecard.html  sinces.html  tillcard.html  tills.html  wagercard.html  wagers.html
