[project]
name = "mtb-pykeybasebot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.10",
    "aiosignal==1.3.2",
    "alembic==1.14.0",
    "annotated-types==0.7.0",
    "anyio==4.7.0",
    "aocd-example-parser==2023.12.20",
    "appdirs==1.4.4",
    "asgiref==3.8.1",
    "asttokens==3.0.0",
    "atomicwrites==1.4.0",
    "attrs==24.3.0",
    "backoff==2.2.1",
    "bcrypt==4.2.1",
    "behave==1.2.6",
    "blinker==1.9.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "cowsay==6.1",
    "cryptography==44.0.0",
    "cssselect==1.2.0",
    "dadjokes-plus-plus>=1.2",
    "dataclasses-json==0.5.2",
    "dateparser==1.1.8",
    "decorator==4.4.2",
    "distlib==0.3.1",
    "distro==1.9.0",
    "ecdsa==0.19.0",
    "et-xmlfile==1.0.1",
    "exceptiongroup==1.2.2",
    "execnet==2.1.1",
    "executing==0.9.1",
    "fake-useragent==2.0.3",
    "fasteners==0.19",
    "feedparser==6.0.12",
    #    "ffmpeg==1.4",
    #    "ffprobe==0.5",
    "filelock==3.16.1",
    "flask==3.1.0",
    "flask-wtf==1.2.2",
    "frozenlist==1.5.0",
    "fuzzywuzzy==0.18.0",
    "gdown==4.5.1",
    "greenlet==3.2.4",
    "gunicorn>=23.0.0",
    "h11==0.14.0",
    "html5lib==1.1",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "icecream>=2.1.3",
    "lxml-html-clean>=0.4.3",
    "newspaper4k>=0.9.3.1",
    "numpy==2.3.4",
    "oauthlib==3.1.1",
    "onepassword-sdk>=0.3.1",
    "openai==2.13.0",
    "openpyxl==3.0.10",
    "outcome==1.3.0.post0",
    "packaging==24.2",
    "pandas==2.3.3",
    "pandas-stubs==2.0.0.230412",
    "parameterized==0.9.0",
    "parse==1.20.2",
    "parse-type==0.6.4",
    "passlib==1.7.4",
    "pastel==0.2.1",
    "pdbp==1.6.1",
    "pebble==5.1.0",
    "pexpect==4.8.0",
    "pillow==12.0.0",
    "pirateweatherlib==0.4.0",
    "pkginfo==1.5.0.1",
    "platformdirs==4.3.6",
    "playwright==1.55.0",
    "plotly==4.12.0",
    "pluggy==1.5.0",
    "poetry-core==1.0.0",
    "prettytable==3.3.0",
    "proglog==0.1.9",
    "propcache==0.2.1",
    "protobuf==4.21.12",
    "protoc-wheel==21.1",
    "psycopg>=3.2.12",
    "ptable==0.9.2",
    "ptyprocess==0.6.0",
    "py==1.11.0",
    "pyasn1==0.4.8",
    "pyasn1-modules==0.2.8",
    "pycparser==2.20",
    "pycryptodomex==3.11.0",
    "pydantic==2.12.3",
    "pygments==2.18.0",
    "pyjokes==0.6.0",
    "pyjwt==2.10.1",
    "pylev==1.3.0",
    "pynose==1.5.3",
    "pyotp==2.9.0",
    "pyparsing==2.4.7",
    "pyreadline3==3.5.4",
    "pysocks==1.7.1",
    "pytest>=8.3.4",
    "python-dateutil==2.8.2",
    "python-dotenv==0.14.0",
    "python-editor==1.0.4",
    "python-jose==3.3.0",
    "python-levenshtein>=0.27.3",
    "python-multipart==0.0.7",
    "pytz==2020.1",
    "pyvirtualdisplay==3.0",
    "pywin32-ctypes==0.2.0",
    "pyyaml==6.0.3",
    "regex==2024.11.6",
    "requests==2.32.3",
    "retrying==1.3.4",
    "rich==13.9.4",
    "rsa==4.7.2",
    "sbvirtualdisplay==1.4.0",
    "secretstorage==3.3.3",
    #    "selenium==4.27.1",
    #    "seleniumbase==4.33.11",
    "setuptools==75.6.0",
    "sgmllib3k==1.0.0",
    "shellingham==1.3.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.6",
    "speedtest-cli==2.1.3",
    "sqlalchemy>=2.0.44",
    "tabcompleter==1.4.0",
    "tabulate==0.8.7",
    "tldextract==2.2.3",
    "toml==0.10.1",
    "tomlkit==0.7.0",
    "tqdm==4.67.1",
    "trio==0.27.0",
    "trio-websocket==0.11.1",
    "types-pytz==2022.1.2",
    "typing-inspect==0.6.0",
    "tzdata==2024.2",
    "tzlocal==2.1",
    "us==2.0.2",
    "virtualenv==20.0.31",
    "wcwidth==0.2.5",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "websockets==14.1",
    "webvtt-py==0.5.1",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "wsproto==1.2.0",
    "wtforms==3.2.1",
    "yarl==1.18.3",
    "yt-dlp[default]==2025.12.8",
]
